# django-flexible-reports

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: README.md
example/example/: settings.py  urls.py
example/templates/flexible_reports/: base.html
flexible_reports/: apps.py  constants.py  models.py  urls.py  utils.py  views.py
flexible_reports/adapters/: django_tables2.py
flexible_reports/admin/: __init__.py  datasource.py  helpers.py  report.py  table.py
flexible_reports/locale/pl/LC_MESSAGES/: django.po
flexible_reports/migrations/: 0001_initial.py  0002_auto_20170823_2225.py  0003_table_attrs.py  0004_auto_20170823_2342.py  0005_column_attrs.py  0006_default_ordering.py  0007_sort_desc.py  0008_auto_20171025_0553.py  0009_auto_20171025_0558.py  0010_auto_20171026_0340.py  0011_alter_reportelement_options_alter_column_attrs_and_more.py
flexible_reports/models/: __init__.py  behaviors.py  column.py  datasource.py  report.py  table.py  validators.py
flexible_reports/templates/flexible_reports/: report.html
flexible_reports/templatetags/: flexible_reports_tags.py
test_app/: models.py
test_app/migrations/: 0001_initial.py  0002_mytestbar.py  0003_reallabelled_realtitled_alter_mytestbar_id_and_more.py
test_app/tests/: test_adapters.py  test_templatetags.py  test_util.py
test_app/tests/test_admin/: __init__.py  test_datasource.py  test_report.py  test_table.py
test_app/tests/test_models/: test_behaviors.py  test_column.py  test_datasource.py  test_report.py  test_table.py  test_validators.py
tests/: settings.py  test_models.py  urls.py
